<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Destinasi"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/imgDestinasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/detail_destinasi"
        android:contentDescription="@string/detail_information" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/imgDestinasi"
        android:id="@+id/layoutLokasi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtLokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtDetailLokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_lokasi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/layoutLokasi"
        android:id="@+id/layoutDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtDetailDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_deskripsi"/>
    </LinearLayout>

</RelativeLayout>