<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <RelativeLayout
        android:background="#F3F4F8"
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_marginStart="10dp"
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/img_profile" />
        <TextView
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imgProfile"
            android:id="@+id/txtName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imgProfile"
            android:layout_below="@id/txtName"
            android:id="@+id/txtPekerjaan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_job" />
        <Button
            android:background="@drawable/rect_white"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btnEdit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

    <!--Pantai Parangtritis-->
    <RelativeLayout
        android:id="@+id/parangtritis"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/parangtritis">
        <TextView
            android:id="@+id/txtParangtritis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destinasi_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/txtDetailParangtritis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_information"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

    <!--Pantai Sadranan-->
    <RelativeLayout
        android:id="@+id/sadranan"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/sadranan">
        <TextView
            android:id="@+id/txtSadranan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destinasi_2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/txtDetailSadranan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_information"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

    <!--Mangunan-->
    <RelativeLayout
        android:id="@+id/mangunan"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/mangunan">
        <TextView
            android:id="@+id/txtMangunan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destinasi_3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/txtDetailMangunan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_information"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

</LinearLayout>